--- a/FED.ipynb
+++ b/FED.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: apify-client in c:\\users\\admin\\anaconda3\\lib\\site-packages (1.6.4)\n",
+      "Requirement already satisfied: apify-shared~=1.1.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from apify-client) (1.1.1)\n",
+      "Requirement already satisfied: httpx>=0.25.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from apify-client) (0.27.0)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (1.0.5)\n",
+      "Requirement already satisfied: anyio in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (3.5.0)\n",
+      "Requirement already satisfied: idna in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (3.4)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (1.3.1)\n",
+      "Requirement already satisfied: certifi in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (2022.12.7)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx>=0.25.1->apify-client) (0.14.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install apify-client"
+   ]
   },
   {
    "cell_type": "code",
@@ -13,11 +32,172 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💾 Check your data here: https://console.apify.com/storage/datasets/C7NGuaJgSlaYi5H5t\n",
+      "{'inputUrl': 'https://www.instagram.com/uwengsoc', 'id': '3369946306410358751', 'type': 'Image', 'shortCode': 'C7EdE-Zuqff', 'caption': 'Genius Bowl is a once per term multi category trivia night where teams of 1 or 2 compete to have their name on the Genius Bowl trophy + giftcard! \\n\\nDrinks and food are provided, come to POETS from 6pm-8pm for a night full of trivia and fun.', 'hashtags': [], 'mentions': [], 'url': 'https://www.instagram.com/p/C7EdE-Zuqff/', 'commentsCount': 0, 'firstComment': '', 'latestComments': [], 'dimensionsHeight': 1320, 'dimensionsWidth': 1080, 'displayUrl': 'https://scontent.cdninstagram.com/v/t51.29350-15/443842424_1522650781927681_8726807010980568327_n.jpg?stp=dst-jpg_e15_fr_p1080x1080&_nc_ht=scontent.cdninstagram.com&_nc_cat=101&_nc_ohc=YME__1ouuaAQ7kNvgEiV1p6&edm=APs17CUBAAAA&ccb=7-5&oh=00_AYApAUTCQ6i68lLvxSAdK8RzHMYP0n7NY83BC1slB03gsQ&oe=664FDC46&_nc_sid=10d13b', 'images': [], 'alt': \"Photo by Waterloo Engineering Society on May 17, 2024. May be a doodle of \\u200etext that says '\\u200eENCIWEERING ริ OF WAT GENIUS BOWL ? 1۹ ؟ ዘክም હ POETS May 24th 6pm 8pm Battle against other teams in topics from pop culture to history for a chance to win a giftcard!\\u200e'\\u200e.\", 'likesCount': 34, 'timestamp': '2024-05-17T12:28:46.000Z', 'childPosts': [], 'ownerFullName': 'Waterloo Engineering Society', 'ownerUsername': 'uwengsoc', 'ownerId': '390270574', 'isSponsored': False}\n",
+      " \n",
+      "{'inputUrl': 'https://www.instagram.com/uwengsoc', 'id': '3370192627285773067', 'type': 'Image', 'shortCode': 'C7FVFamAksL', 'caption': 'LAST MINUTE EVENT: PLANTING FOR POLLINATORS AT 6PM IN FRONT OF POETS!!\\n\\nAccessibility: Low energy, accessible', 'hashtags': [], 'mentions': [], 'url': 'https://www.instagram.com/p/C7FVFamAksL/', 'commentsCount': 0, 'firstComment': '', 'latestComments': [], 'dimensionsHeight': 1350, 'dimensionsWidth': 1080, 'displayUrl': 'https://scontent.cdninstagram.com/v/t51.29350-15/445180513_805202018217122_1565676637896097543_n.heic?stp=dst-jpg_e35&_nc_ht=scontent.cdninstagram.com&_nc_cat=102&_nc_ohc=iXPOEVOMKasQ7kNvgHMgS8c&edm=APs17CUBAAAA&ccb=7-5&oh=00_AYBe0DRsohzCHYfUozSm92dG6G24nYAqIM3nGpqrNG0aJA&oe=664FF8AC&_nc_sid=10d13b', 'images': [], 'alt': \"Photo by Waterloo Engineering Society on May 17, 2024. May be an image of text that says 'Planting for the pollinators Help introduce native biodiversity to campus! Friday, May 17 6:00-7:00pm Planters outside POETS EЛИИE EFONO ROO WATERLOO ENGINEERING ENGINEERINGSOCIET SOCIETY Low Energy ôi'.\", 'likesCount': 38, 'timestamp': '2024-05-17T20:38:10.000Z', 'childPosts': [], 'ownerFullName': 'Waterloo Engineering Society', 'ownerUsername': 'uwengsoc', 'ownerId': '390270574', 'isSponsored': False}\n",
+      " \n",
+      "{'inputUrl': 'https://www.instagram.com/uwengsoc', 'id': '3361730735794005962', 'type': 'Image', 'shortCode': 'C6nREsBg6fK', 'caption': 'This is a guide to our accessibility icons. These icons are used on our posts to provide clear and transparent accessibility information on events.\\n\\nHere are all our accessibility icons:\\nFirst aid available\\nLow energy\\nHigh energy\\nScents\\nCrowded\\nFood available \\nLow lighting\\nAlcohol present\\nBarrier-free\\nPhysical activity \\nClosed captioning \\nMoney required \\nLoud noises\\nIntense lighting\\nSensitive content', 'hashtags': [], 'mentions': [], 'url': 'https://www.instagram.com/p/C6nREsBg6fK/', 'commentsCount': 0, 'firstComment': '', 'latestComments': [], 'dimensionsHeight': 1080, 'dimensionsWidth': 1080, 'displayUrl': 'https://scontent.cdninstagram.com/v/t51.29350-15/442410742_3707343236221802_4919486411768141936_n.heic?stp=dst-jpg_e35&_nc_ht=scontent.cdninstagram.com&_nc_cat=102&_nc_ohc=nTk6O4vDT1gQ7kNvgG3wOpB&edm=APs17CUBAAAA&ccb=7-5&oh=00_AYD15cylYyNPi-EO0Q_2pXjolCbttJaQTNzclh6U7katog&oe=664FED30&_nc_sid=10d13b', 'images': [], 'alt': \"Photo by Waterloo Engineering Society on May 05, 2024. May be a graphic of wheelchair, poster, magazine and text that says 'ACCESSIBILITY ICONS These icons are used on our posts to provide clear and transparent accessibility information on our events. LemEnengy Hgh HighBnengy FIRST AID AVAILABLE LOW ENERGY HIGH ENERGY SCENTS CROWDED 1۶ FOOD AVAILABLE LOW LIGHTING ALCOHOL PRESENT હ BARRIER- FREE PHYSICAL ACTIVITY $ CLOSED CAPTIONING AVAILABLE MONEY REQUIRED LOUD NOISES INTENSE LIGHTING SENSITIVE CONTENT'.\", 'likesCount': 83, 'timestamp': '2024-05-06T04:25:54.000Z', 'childPosts': [], 'ownerFullName': 'Waterloo Engineering Society', 'ownerUsername': 'uwengsoc', 'ownerId': '390270574', 'isSponsored': False, 'isPinned': True}\n",
+      " \n",
+      "{'inputUrl': 'https://www.instagram.com/uwengsoc', 'id': '3362078582057864464', 'type': 'Image', 'shortCode': 'C6ogKhGgg0Q', 'caption': 'Calling student leaders!\\n\\nB-Soc Presidential Elections are happening! Nominations open May 13, 2024.\\n\\nYou must meet the following requirements to run:\\nMust be on at least your 2B term during W25\\nMaintain a 65% average\\nMust not be on academic probation \\nSecure 15 signatures from your fellow engineering classmates\\n\\nFor more information email cro.b@engsoc.uwaterloo.ca', 'hashtags': [], 'mentions': ['engsoc.uwaterloo.ca'], 'url': 'https://www.instagram.com/p/C6ogKhGgg0Q/', 'commentsCount': 0, 'firstComment': '', 'latestComments': [], 'dimensionsHeight': 1350, 'dimensionsWidth': 1080, 'displayUrl': 'https://scontent.cdninstagram.com/v/t51.29350-15/442413929_1150006813007041_4926058198517894703_n.heic?stp=dst-jpg_e35&_nc_ht=scontent.cdninstagram.com&_nc_cat=101&_nc_ohc=ecDdCgzjOTwQ7kNvgGD6_B7&edm=APs17CUBAAAA&ccb=7-5&oh=00_AYCQBnZEPcKjxBnmFdTnI1fuWn6CLzR0zXF4VyT_Nxsvhg&oe=664FE7AA&_nc_sid=10d13b', 'images': [], 'alt': \"Photo by Waterloo Engineering Society on May 06, 2024. May be an image of card, poster, magazine and text that says 'B-SOC Presidential Elections S24 Nominations for - Presidential Elections open MAY 13, 2024 REQUIREMENTS Must be on at least your 2 term during W25 •Maintain a 65% average ·Must not be on academic probation Secure 15 signatures of nomination from your fellow engineering classmates For more information email cro.b@engsoc.uwaterloo.ca ENGINEERING OF'.\", 'likesCount': 42, 'timestamp': '2024-05-06T15:57:00.000Z', 'childPosts': [], 'ownerFullName': 'Waterloo Engineering Society', 'ownerUsername': 'uwengsoc', 'ownerId': '390270574', 'isSponsored': False, 'isPinned': True}\n",
+      " \n",
+      "{'inputUrl': 'https://www.instagram.com/uwengsoc', 'id': '3366727728136099232', 'type': 'Image', 'shortCode': 'C65BQfzApWg', 'caption': \"here's your may 13 weekly calendar!\\nhope you all had a great first week back!\", 'hashtags': [], 'mentions': [], 'url': 'https://www.instagram.com/p/C65BQfzApWg/', 'commentsCount': 0, 'firstComment': '', 'latestComments': [], 'dimensionsHeight': 1350, 'dimensionsWidth': 1080, 'displayUrl': 'https://scontent.cdninstagram.com/v/t51.29350-15/443239775_752391870104821_1393393531741285029_n.heic?stp=dst-jpg_e35&_nc_ht=scontent.cdninstagram.com&_nc_cat=101&_nc_ohc=VWuXdR3VirsQ7kNvgFOOJ6o&edm=APs17CUBAAAA&ccb=7-5&oh=00_AYClpe-_1ELJDKKxazNwAnMbhAFQc6nIsS-VSQOOpl_uIQ&oe=664FFC84&_nc_sid=10d13b', 'images': [], 'alt': \"Photo by Waterloo Engineering Society on May 12, 2024. May be an image of calendar, card, poster, magazine and text that says 'WEEKLY CALENDAR 13 MAY - 19 MAY ENGNEERING COVERALL SALES BEN WA Monday 13 MAY- 31 MAY Tuesday - PREZ NOMINATIONS OPEN EDI Office Hour 3-4pm, see below Engiqueers BOT 6-9pm, POETS Wednesday Leather Jacket Day 11am-4pm, W Store Council 6-9pm, E7 5353 Thursday Friday Resume Critiques 6-9pm, RCH 307 Saturday Planting for Pollinators 6-7pm, POETS Sunday Other Information EDI Office Hour Elders Garden (4th Floor E5) Rainy Days: 3rd Floor E5 POETS Hours M-F: 8:30am-5pm 5pm Affiliate Events Check out @nsbe.uwaterloo info! @uwengiqueers for more'.\", 'likesCount': 32, 'timestamp': '2024-05-13T01:54:02.000Z', 'childPosts': [], 'ownerFullName': 'Waterloo Engineering Society', 'ownerUsername': 'uwengsoc', 'ownerId': '390270574', 'isSponsored': False, 'isPinned': True}\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "from apify_client import ApifyClient\n",
+    "\n",
+    "# Initialize the ApifyClient with your Apify API token\n",
+    "client = ApifyClient(\"apify_api_4SDu7dhMg8TGsyriGAf4zaXPrbqZdh21MvcY\")\n",
+    "\n",
+    "# Prepare the Actor input\n",
+    "run_input = {\n",
+    "    \"username\": [\"uwengsoc\"],\n",
+    "    \"resultsLimit\": 5,\n",
+    "}\n",
+    "\n",
+    "# Run the Actor and wait for it to finish\n",
+    "run = client.actor(\"apify/instagram-post-scraper\").call(run_input=run_input)\n",
+    "\n",
+    "# Fetch and print Actor results from the run's dataset (if there are any)\n",
+    "print(\"💾 Check your data here: https://console.apify.com/storage/datasets/\" + run[\"defaultDatasetId\"])\n",
+    "for item in client.dataset(run[\"defaultDatasetId\"]).iterate_items():\n",
+    "    print(item)\n",
+    "    print(\" \")\n",
+    "\n",
+    "# 📚 Want to learn more 📖? Go to → https://docs.apify.com/api/client/python/docs/quick-start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install -q -U google-generativeai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.instagram.com/p/C6_xxdBAjbn/\n",
+      "Location: POETS\n",
+      "Time: 6-7pm\n",
+      "Date: Wednesday, May 22nd\n",
+      "https://www.instagram.com/p/C7AAQ71AxhZ/\n",
+      "**Location:** Meeting location @ POETS -- Tours @ ESC 3rd Floor Renovations site (on Waterloo campus)\n",
+      "\n",
+      "**Time:** 11:15AM** to 12:30PM\n",
+      "\n",
+      "**Date:** Wednesday, May 22nd, 2024\n",
+      "No free food event has been detected\n",
+      "https://www.instagram.com/p/C6nREsBg6fK/\n",
+      "Location: Not available\n",
+      "Time: Not available\n",
+      "Date: May 05, 2024\n",
+      "No free food event has been detected\n",
+      "https://www.instagram.com/p/C7EdE-Zuqff/\n",
+      "Location: POETS\n",
+      "Time: 6pm-8pm\n",
+      "Date: May 24th\n",
+      "No free food event has been detected\n",
+      "No free food event has been detected\n",
+      "No free food event has been detected\n",
+      "No free food event has been detected\n"
+     ]
+    }
+   ],
+   "source": [
+    "from apify_client import ApifyClient\n",
+    "import google.generativeai as genai\n",
+    "\n",
+    "# Initialize the ApifyClient with your Apify API token\n",
+    "client = ApifyClient(\"apify_api_4SDu7dhMg8TGsyriGAf4zaXPrbqZdh21MvcY\")\n",
+    "\n",
+    "# Prepare the Actor input\n",
+    "run_input = {\n",
+    "    \"username\": [\"uwengsoc\"],\n",
+    "    \"resultsLimit\": 10,\n",
+    "}\n",
+    "\n",
+    "# Run the Actor and wait for it to finish\n",
+    "run = client.actor(\"apify/instagram-post-scraper\").call(run_input=run_input)\n",
+    "\n",
+    "# Fetch and process Actor results from the run's dataset (if there are any)\n",
+    "for item in client.dataset(run[\"defaultDatasetId\"]).iterate_items():\n",
+    "    # Extract the caption from the scraped data\n",
+    "#     caption = item.get('caption', '')\n",
+    "#     print(caption)\n",
+    "    \n",
+    "    API_KEY = \"AIzaSyAnWA58Y4NpDY-rss-LQphg2oyPUxqAgd8\"\n",
+    "    genai.configure(api_key=API_KEY)\n",
+    "\n",
+    "    # Initialize the generative model\n",
+    "    model = genai.GenerativeModel('gemini-pro')\n",
+    "\n",
+    "    # Construct the prompt\n",
+    "    prompt_1 = f\" You think this {item} indicates an event that provides free food, output Yes, otherwise No \"\n",
+    "    \n",
+    "    response_1 = model.generate_content(prompt_1)\n",
+    "    # print(response.text)\n",
+    "    \n",
+    "    if(response_1.text == \"Yes\"): \n",
+    "        caption = item.get('caption', '')\n",
+    "        post_url = item.get('url', '')\n",
+    "        post_photo = item.get('alt', '')\n",
+    "        # print(caption)\n",
+    "        prompt_2 = f\" Extract the location, time and date from {caption} and/or {post_photo}. If either one of the location, time or data cannot be found, dont output anything for that post\"\n",
+    "        response_2 = model.generate_content(prompt_2)\n",
+    "        print(post_url)\n",
+    "        print(response_2.candidates[0].content.parts[0].text)\n",
+    "    else: \n",
+    "        print(\"No free food event has been detected\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
