--- a/FED.ipynb
+++ b/FED.ipynb
@@ -2,28 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: apify-client in c:\\users\\admin\\anaconda3\\lib\\site-packages (1.6.4)\n",
-      "Requirement already satisfied: apify-shared~=1.1.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from apify-client) (1.1.1)\n",
-      "Requirement already satisfied: httpx>=0.25.1 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from apify-client) (0.27.0)\n",
-      "Requirement already satisfied: httpcore==1.* in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (1.0.5)\n",
-      "Requirement already satisfied: anyio in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (3.5.0)\n",
-      "Requirement already satisfied: idna in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (3.4)\n",
-      "Requirement already satisfied: sniffio in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (1.3.1)\n",
-      "Requirement already satisfied: certifi in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpx>=0.25.1->apify-client) (2022.12.7)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx>=0.25.1->apify-client) (0.14.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (832729883.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    -m pip install apify-client\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "pip install apify-client"
+    "-m pip install apify-client"
    ]
   },
   {
@@ -79,6 +71,20 @@
     "\n",
     "# 📚 Want to learn more 📖? Go to → https://docs.apify.com/api/client/python/docs/quick-start"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -197,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
